--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "final-form": "^4.11.0",
+    "firebase": "^5.8.2",
     "lodash": "^4.17.11",
     "node-sass": "^4.10.0",
     "react": "^16.6.0",
